[gd_scene load_steps=53 format=3 uid="uid://pcckk0mxa7cg"]

[ext_resource type="Texture2D" uid="uid://bx1row31f80jf" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 01.png" id="1_eau7k"]
[ext_resource type="Script" path="res://scripts/crabby/crabby.gd" id="1_xvb3n"]
[ext_resource type="Texture2D" uid="uid://b4ow8t372hcta" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 02.png" id="2_alehl"]
[ext_resource type="Texture2D" uid="uid://csuy0bv7btwph" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 03.png" id="3_m4c77"]
[ext_resource type="Texture2D" uid="uid://bm5t6fu3gypq8" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" id="4_wspdg"]
[ext_resource type="Texture2D" uid="uid://bw01wxcxs8tnk" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" id="5_uj3my"]
[ext_resource type="Texture2D" uid="uid://vbg6mwn61gfo" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" id="6_unjq1"]
[ext_resource type="Texture2D" uid="uid://b8mum6naeqdoe" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" id="7_lt0yd"]
[ext_resource type="Texture2D" uid="uid://b5jwjimjro4ll" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 01.png" id="8_frgoo"]
[ext_resource type="Texture2D" uid="uid://u2de3j34l6h5" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 02.png" id="9_a48xl"]
[ext_resource type="Texture2D" uid="uid://bq8sl7k7h2hw" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 03.png" id="10_a8drm"]
[ext_resource type="Texture2D" uid="uid://dmbo1062sgoiy" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 04.png" id="11_5vojx"]
[ext_resource type="Texture2D" uid="uid://bbeo5g8xroncf" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 01.png" id="12_4l0yf"]
[ext_resource type="Texture2D" uid="uid://4elhtk611tfg" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 02.png" id="13_ah6ij"]
[ext_resource type="Texture2D" uid="uid://ddvel4gqqkt6f" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 03.png" id="14_05itk"]
[ext_resource type="Texture2D" uid="uid://bsclo65cq5at1" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 04.png" id="15_urwuh"]
[ext_resource type="Texture2D" uid="uid://cwapd6a3ppwta" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/04-Fall/Fall 01.png" id="16_mdayg"]
[ext_resource type="Texture2D" uid="uid://c7ec81itx2hvo" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/05-Ground/Ground 01.png" id="17_7dqp0"]
[ext_resource type="Texture2D" uid="uid://cr874a4yg8oh5" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/05-Ground/Ground 02.png" id="18_jsu3u"]
[ext_resource type="Texture2D" uid="uid://m8sho6oaldy7" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 01.png" id="19_ckkqh"]
[ext_resource type="Texture2D" uid="uid://cwau8x5cng5x2" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 02.png" id="20_ghg1q"]
[ext_resource type="Texture2D" uid="uid://bmaa8opf2gn5i" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 03.png" id="21_87xwt"]
[ext_resource type="Texture2D" uid="uid://ca4abbx0b4rr" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 04.png" id="22_dg8qr"]
[ext_resource type="Texture2D" uid="uid://fvo2l31x0f4n" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" id="23_450ar"]
[ext_resource type="Texture2D" uid="uid://c026qjnmcfm1f" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" id="24_h2ooc"]
[ext_resource type="Texture2D" uid="uid://dfrh1xiol6twu" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" id="25_u73qw"]
[ext_resource type="Texture2D" uid="uid://0wx6jm8kdqs1" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" id="26_l8oyv"]
[ext_resource type="Texture2D" uid="uid://ck8tjai30ufkt" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" id="27_hkgvg"]
[ext_resource type="Texture2D" uid="uid://b5fbxsc050elp" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" id="28_ponwu"]
[ext_resource type="Texture2D" uid="uid://117nkv8ivq8v" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" id="29_fdajf"]
[ext_resource type="Texture2D" uid="uid://bmbvv7uxkl4j5" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" id="30_2u815"]
[ext_resource type="Texture2D" uid="uid://cjweiunyikoxd" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" id="31_5l0ww"]
[ext_resource type="Texture2D" uid="uid://c5r3h5fj6skk" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 01.png" id="32_7ispu"]
[ext_resource type="Texture2D" uid="uid://c8fggo2acbhla" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 02.png" id="33_05x0v"]
[ext_resource type="Texture2D" uid="uid://c8q742xeuwavv" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 03.png" id="34_xd8le"]
[ext_resource type="Texture2D" uid="uid://brgecgntohwbe" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 01.png" id="35_q73r6"]
[ext_resource type="Texture2D" uid="uid://btiksr6j72ckk" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 02.png" id="36_jknmt"]
[ext_resource type="Texture2D" uid="uid://hcwwodutyhmk" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 03.png" id="37_8x1ta"]
[ext_resource type="Texture2D" uid="uid://ffx6hblc73qd" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 04.png" id="38_fjokl"]
[ext_resource type="Texture2D" uid="uid://c6ily3p7nwent" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 05.png" id="39_q3hag"]
[ext_resource type="Texture2D" uid="uid://c3xiw7cvhuv3e" path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 06.png" id="40_a4g8l"]
[ext_resource type="Script" path="res://scripts/finite_state_machine.gd" id="42_rnncx"]
[ext_resource type="Script" path="res://scripts/crabby/crabby_attack_state.gd" id="43_2b5bg"]
[ext_resource type="Script" path="res://scripts/crabby/crabby_chase_state.gd" id="44_xxliq"]
[ext_resource type="Script" path="res://scripts/crabby/crabby_wander_state.gd" id="45_2hbr8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s84oo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_eau7k")
}, {
"duration": 1.0,
"texture": ExtResource("2_alehl")
}, {
"duration": 1.0,
"texture": ExtResource("3_m4c77")
}],
"loop": true,
"name": &"anticipation",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_wspdg")
}, {
"duration": 1.0,
"texture": ExtResource("5_uj3my")
}, {
"duration": 1.0,
"texture": ExtResource("6_unjq1")
}, {
"duration": 1.0,
"texture": ExtResource("7_lt0yd")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_frgoo")
}, {
"duration": 1.0,
"texture": ExtResource("9_a48xl")
}, {
"duration": 1.0,
"texture": ExtResource("10_a8drm")
}, {
"duration": 1.0,
"texture": ExtResource("11_5vojx")
}],
"loop": true,
"name": &"dead_ground",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_4l0yf")
}, {
"duration": 1.0,
"texture": ExtResource("13_ah6ij")
}, {
"duration": 1.0,
"texture": ExtResource("14_05itk")
}, {
"duration": 1.0,
"texture": ExtResource("15_urwuh")
}],
"loop": false,
"name": &"dead_hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_mdayg")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_7dqp0")
}, {
"duration": 1.0,
"texture": ExtResource("18_jsu3u")
}],
"loop": true,
"name": &"ground",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_ckkqh")
}, {
"duration": 1.0,
"texture": ExtResource("20_ghg1q")
}, {
"duration": 1.0,
"texture": ExtResource("21_87xwt")
}, {
"duration": 1.0,
"texture": ExtResource("22_dg8qr")
}],
"loop": true,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_450ar")
}, {
"duration": 1.0,
"texture": ExtResource("24_h2ooc")
}, {
"duration": 1.0,
"texture": ExtResource("25_u73qw")
}, {
"duration": 1.0,
"texture": ExtResource("26_l8oyv")
}, {
"duration": 1.0,
"texture": ExtResource("27_hkgvg")
}, {
"duration": 1.0,
"texture": ExtResource("28_ponwu")
}, {
"duration": 1.0,
"texture": ExtResource("29_fdajf")
}, {
"duration": 1.0,
"texture": ExtResource("30_2u815")
}, {
"duration": 1.0,
"texture": ExtResource("31_5l0ww")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_7ispu")
}, {
"duration": 1.0,
"texture": ExtResource("33_05x0v")
}, {
"duration": 1.0,
"texture": ExtResource("34_xd8le")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_q73r6")
}, {
"duration": 1.0,
"texture": ExtResource("36_jknmt")
}, {
"duration": 1.0,
"texture": ExtResource("37_8x1ta")
}, {
"duration": 1.0,
"texture": ExtResource("38_fjokl")
}, {
"duration": 1.0,
"texture": ExtResource("39_q3hag")
}, {
"duration": 1.0,
"texture": ExtResource("40_a4g8l")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbgbl"]
size = Vector2(20, 21)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rhwna"]
a = Vector2(89, -2)
b = Vector2(-86, -2)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ymvou"]
radius = 6.0
height = 48.0

[sub_resource type="Theme" id="Theme_wddfi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udcmo"]
bg_color = Color(0.6, 0.6, 0.6, 0.568627)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbsur"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Crabby" type="CharacterBody2D" node_paths=PackedStringArray("ray_cast", "animator")]
collision_layer = 3
collision_mask = 16
script = ExtResource("1_xvb3n")
ray_cast = NodePath("RayCast2D")
animator = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s84oo")
animation = &"attack"
frame_progress = 0.035528

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_gbgbl")

[node name="eye_sight" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="eye_sight"]
shape = SubResource("SegmentShape2D_rhwna")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("42_rnncx")
state = NodePath("CrabbyWanderState")

[node name="CrabbyAttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("crabby", "animator", "eye_sight", "attack_range")]
script = ExtResource("43_2b5bg")
crabby = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
eye_sight = NodePath("../../eye_sight")
attack_range = NodePath("../../attack_range")

[node name="CrabbyChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("crabby", "animator", "ray_cast")]
script = ExtResource("44_xxliq")
crabby = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
ray_cast = NodePath("../../RayCast2D")

[node name="CrabbyWanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("crabby", "animator", "ray_cast")]
script = ExtResource("45_2hbr8")
crabby = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
ray_cast = NodePath("../../RayCast2D")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-30, 2.08165e-12)
collision_mask = 8

[node name="attack_range" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ymvou")

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -19.0
offset_right = 23.0
offset_bottom = -12.0
theme = SubResource("Theme_wddfi")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_udcmo")
theme_override_styles/fill = SubResource("StyleBoxFlat_qbsur")
value = 50.0
show_percentage = false

[connection signal="body_entered" from="eye_sight" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="eye_sight" to="FiniteStateMachine/CrabbyWanderState" method="_on_eye_sight_body_entered"]
[connection signal="body_exited" from="eye_sight" to="." method="_on_detection_area_body_exited"]
[connection signal="body_exited" from="eye_sight" to="FiniteStateMachine/CrabbyChaseState" method="_on_eye_sight_body_exited"]
